--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -2,13 +2,12 @@
 @use "variables.scss";
 
 body {
-  height: 100%;
   width: 100vw;
   background: linear-gradient(252.44deg, #1a1a1a 0%, #0a0a0a 100%);
   background-repeat: no-repeat;
   background-size: cover;
   overflow-x: hidden;
-  padding-bottom: 160px;
+  padding-bottom: 40px;
 
   header {
     .header__container {
@@ -18,7 +17,7 @@ body {
       max-width: 1024px;
       width: 100%;
       margin: 0 auto;
-      padding: 32px 0;
+      padding: 32px 0 16px;
 
       h1 {
         color: variables.$lightGray;
@@ -54,7 +53,7 @@ body {
     max-width: 600px;
     width: 100%;
     margin: 0 auto;
-    padding-top: 72px;
+    padding-top: 35px;
 
     &__call-to-action {
       font-size: 48px;
@@ -68,7 +67,7 @@ body {
       font-size: 32px;
       font-weight: 500;
       color: variables.$purple;
-      margin: 32px 0 105px;
+      margin: 32px 0 60px;
     }
 
     span {
@@ -104,6 +103,16 @@ body {
           background-color: transparent;
           border: 1px solid variables.$blackLight;
           margin-top: 8px;
+          padding: 10px;
+          font-weight: bold;
+          font-size: 18px;
+          color: variables.$lightGray;
+          &:-webkit-autofill {
+            -webkit-text-fill-color: variables.$lightGray !important;
+            background-clip: text;
+            -webkit-background-clip: text;
+            color: transparent;
+          }
 
           &:focus {
             outline-color: variables.$purple;
@@ -150,8 +159,8 @@ body {
 
     &__content {
       position: absolute;
-      top: 200px;
-      left: 340px;
+      top: 300px;
+      left: 450px;
       width: 800px;
       height: 300px;
       background-color: variables.$black;
